[package]
authors = ["{{authors}}"]
edition = "2018"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
rmicrobit = "0.4.0"
cortex-m-rtfm = "0.5.0"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"

[profile.release]
debug = true # symbols are nice and they don't increase the size on Flash
codegen-units = 1 # better optimizations
lto = true # better optimizations
